gitops/lmsensors-container/base/daemonset-env-patch.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: lmsensors
spec:
  selector:
    matchLabels:
      name: lmsensors
  template:
    metadata:
      labels:
        name: lmsensors
    spec:
      containers:
        - name: lmsensors
