gitops/lmsensors-container/base/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensordash-webserver
  labels:
    app: sensordash
spec:
  template:
    spec:
      containers:
        - name: webserver
          securityContext:
            privileged: true
            runAsUser: 0
      serviceAccountName: sensordash
