gitops/lmsensors-container/base/sensor-dash-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sensor-dash-ingress
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - sensor-dash.apps.lab-01.okd.home.arpa
      secretName: sensor-dash-tls
  rules:
    - host: sensor-dash.apps.lab-01.okd.home.arpa
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: sensordash-service
                port:
                  number: 80
